--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,8 @@
 			</span>
 		</li>
 	</ul>
-</div><div class="step-1">
+</div><div class="slider-wrapper" page="page-1">
+<div class="step step-1">
 	<div class="img-wrapper">
 		<div class="img img-1"></div>
 		<div class="img img-2"></div>
@@ -131,15 +132,19 @@
 		<div class="img img-4"></div>
 
 		<div class="text">
-			<p>Acme celebrates <span>40 years of ricing</span> supporting regional industries</p>
+			<p>Ваш <span>успіх</span> складається<br>з <span>нашої</span> плити</p>
 		</div>
 	</div>
-</div><div class="step-2">
+</div><div class="step step-2">
 	<div class="wrapper">
+
+		<!-- title -->
 		<div class="title-step">
 			<h2>Виробляємо</h2>
 			<p class="sub">всі види сендвіч панелей</p>
 		</div>
+
+		<!-- buttons -->
 		<div class="buttons-wrapper">
 			<div class="home-button">
 				<span class="top"><span>Пінополістерол</span></span>
@@ -157,15 +162,19 @@
 				<span><span>Покрівельні</span></span>
 			</div>
 		</div>
+
+		<!-- visualization -->
 		<div class="visualization">
 			<div class="viz-wrapper">
-				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center/contain"></div>
+				<div class="image" style="background:url('pictures/img2.jpg') no-repeat center"></div>
 				<div class="content">
 					
 				</div>
 				<span class="more">Детальніше</span>
 			</div>
 		</div>
+
+		<!-- container -->
 		<div class="container">
 			<div class="wrapper">
 				<h3>Переваги<span>сендвіч панелей</span></h3>
@@ -198,8 +207,9 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
-</div><div class="step-3" position="" step="">
+</div><div class="step step-3" position="" step="">
 	<div>
 
 		<!-- text -->
@@ -340,7 +350,7 @@
 
 	</div>
 </div>
-<div class="step-4">
+<div class="step step-4">
 	<div class="title-step">
 		<h2>Контакти</h2>
 		<div class="text">
@@ -386,16 +396,8 @@
 		</div>
 	</div>
 </div>
-<footer>
-	<div class="logo">
-		<div>
-			<img src="img/logo.png" alt="">
-		</div>
-	</div>
-	<p class="copyright">© termobud 2016</p>
-	<p class="developer">Designed & Developed by <a href="http://bambukstudio.com/" target="_blank">Bambuk Design Studio</a></p>
-	</a>
-</footer><div class="lines">
+</div>
+<div class="lines">
 	<span><span></span></span>
 	<span><span></span></span>
 	<span><span></span></span>
