--- a/app/montage.html
+++ b/app/montage.html
@@ -132,11 +132,11 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-2">
@@ -151,11 +151,11 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-3">
@@ -168,17 +168,17 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-3">
+			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-3">
 				<div class="video">
 					<video id="video-about-1" preload="none" loop autoplay>
 						<source src="video/video2.mp4" type="video/mp4">
 					</video>
 				</div>
 			</div>
-			<div class="item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-4">
@@ -191,11 +191,11 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><footer>
