--- a/app/about.html
+++ b/app/about.html
@@ -314,6 +314,16 @@
 	<span><span></span></span>
 	<span><span></span></span>
 	<span><span></span></span>
+</div>
+<div class="load-page">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 </div>	</div>
 
 <div class="form-wrapper">
