--- a/app/montage.html
+++ b/app/montage.html
@@ -133,11 +133,17 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(0px);" data-top="transform:translateY(-300px);" 
+			class="wow_ item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(200px);" data-top="transform:translateY(-1200px);" 
+			class="wow_ item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(0px);" data-top="transform:translateY(-400px);" 
+			class="wow_ item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-2">
@@ -152,11 +158,13 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div
+				data-0="transform:translateY(900px);" data-top="transform:translateY(-1600px);"
+				class="wow_ item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-3">
@@ -169,17 +177,25 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3">
+			<div 
+			data-0="transform:translateY(800px);" data-top="transform:translateY(-200px);" 
+			class="wow_ item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(2000px);" data-top="transform:translateY(-1000px);" 
+			class="wow_ item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-3">
 				<div class="video">
 					<video id="video-about-1" preload="none" loop autoplay>
 						<source src="video/video2.mp4" type="video/mp4">
 					</video>
 				</div>
 			</div>
-			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(700px);" data-top="transform:translateY(-500px);" 
+			class="wow_ item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(1800px);" data-top="transform:translateY(-1500px);" 
+			class="wow_ item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><div class="step step-4">
@@ -192,11 +208,15 @@
 			</div>
 		</div>
 		<div class="item-wrapper">
-			<div class="wow item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
-			<div class="wow item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-1" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(1500px);" data-top="transform:translateY(-100px);" 
+			class="wow_ item item-2" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div 
+			data-0="transform:translateY(200px);" data-top="transform:translateY(0px);" 
+			class="wow_ item item-3" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-4" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
+			<div class="wow_ item item-5" style="background:url('pictures/img1.jpg') no-repeat center/cover fixed"></div>
 		</div>
 	</div>
 </div><footer>
@@ -215,6 +235,16 @@
 	<span><span></span></span>
 	<span><span></span></span>
 	<span><span></span></span>
+</div>
+<div class="load-page">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 </div>	</div>
 
 	<script src="js/build/index.min.js"></script>
