--- a/app/news.html
+++ b/app/news.html
@@ -183,6 +183,16 @@
 	<span><span></span></span>
 	<span><span></span></span>
 	<span><span></span></span>
+</div>
+<div class="load-page">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 </div>	</div>
 
 	<script src="js/build/index.min.js"></script>
