--- a/app/pages/details/pinopoliuretan-pokrivelni.html
+++ b/app/pages/details/pinopoliuretan-pokrivelni.html
@@ -1,16 +1,35 @@
 <div class="characteristic">
-	<span class="zvukoizolyatsiya">Звукоізоляція</span>
+	<h3>Характеристики</h3>
+	<div class="texh-wrapper">
+		<span class="vohnestiykist">Вогнестійкість</span>
+		<span class="lehkist">Легкість</span>
+		<span class="morozostiykist">Морозостійкість</span>
+		<span class="zvukoizolyatsiya">Звукоізоляція</span>
+	</div>
 </div>
 <div class="appointment">
-	<span class="torhovelni">Торговельні приміщення</span>
-	<span class="nyzka-temperatura">Приміщення з низькою температурою</span>
-	<span class="protypozhezhna-bezpeka">Приміщення з високою вимогою протипожежної безпеки</span>
+	<h3>Призначення</h3>
+	<div class="texh-wrapper">
+		<span class="torhovelni">Торговельні приміщення</span>
+		<span class="promyslovi">Промислові приміщення</span>
+		<span class="nezhytlovi">Нежитлові приміщення</span>
+		<span class="nyzka-temperatura">Приміщення з низькою температурою</span>
+		<span class="protypozhezhna-bezpeka">Приміщення з високою вимогою протипожежної безпеки</span>
+	</div>
 </div>
 <div class="certificate">
-	<span class="iso"></span>
-	<span class="test"></span>
-	<span class="all-documents">Переглянути всі документи</span>
+	<h3>Сертифікати</h3>
+	<div class="texh-wrapper">
+		<span class="iso"></span>
+		<span class="iso-2"></span>
+		<span class="cc"></span>
+		<span class="test"></span>
+		<span class="all-documents">Переглянути всі документи</span>
+	</div>
 </div>
 <div class="technical-catalog">
-	<span class="download">Завантажити</span>
+	<h3>Технічний каталог</h3>
+	<div class="texh-wrapper">
+		<span class="download">Завантажити</span>
+	</div>
 </div>
