--- a/app/index.html
+++ b/app/index.html
@@ -457,6 +457,16 @@
 	<span><span></span></span>
 	<span><span></span></span>
 	<span><span></span></span>
+</div>
+<div class="load-page">
+	<div>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
 </div>	</div>
 
 	<script src="js/build/index.min.js"></script>
